--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
 language: python
+
 python:
   - 3.8
+
+env:
+  global:
+    - PIPENV_VENV_IN_PROJECT=1
+    - PIPENV_IGNORE_VIRTUALENVS=1
+
 install:
-  - pip install -q -r requirements-dev.txt
+  - pip install pipenv
+  - pipenv sync -d
+
 script:
-  - flake8
+  - pipenv run flake8 .
