--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ chardet = "==3.0.4"
 idna = "==2.9"
 requests = "==2.23.0"
 urllib3 = "==1.25.9"
+pytest = "*"
+pytest-mock = "*"
 
 [requires]
 python_version = "3.8"
